--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ var source_text_user;
            // Human text analysis  
   params = {
     text: source_text_user,
-    apikey: '1fc76136a437cca01344ccaad87e29a940992e0b',
+    apikey: 'API KEY',
     outputMode: 'json'
   }
 
