--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <title>Converself</title>
     <style>
-      * { margin: 20%; padding: 20%;}
+     * { margin: 1%; padding: 1%;}
       body { font: 30px Helvetica; }
-      input {font-size: 30px; width: 50%;}
-      #messages { list-style-type: none; margin: 1%; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
+      input {font-size: 30px; width: 100%;  }
+      #messages { list-style-type: none; margin: 0; padding: 0;  }
+      #messages li { padding: 2px 2px; }
+      #messages li:nth-child(odd) {  background: #FFFFFF; }
     </style>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
