--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+<!--Based on Socket Markov Chat by Lauren McCarthy https://github.com/lmccart/itp-convo-comp/tree/master/Conversation_Generation/08_socket_markov_chat-->
   <head>
     <title>Converself</title>
     <style>
